Stop the result items from shifting around on mobile

--- a/oracleapp/assets/css/my.css
+++ b/oracleapp/assets/css/my.css
@@ -117,7 +117,7 @@ li.result-item {
     display:block;
     cursor:hand;
     margin:8px 0;
-    overflow: auto;
+    overflow-y: hidden;
 }
 li.result-item:hover {
     opacity:1.0;
